--- a/Assignments/Project/templates/homepage.html
+++ b/Assignments/Project/templates/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./static/css/homepage.css">
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"> </script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -130,6 +131,10 @@
             
         </div>
 
+       
+
+
+        <button onclick=" window.open('/topicModel','_blank')"> Topic Model </button>
         
         
          <script src = "./static/js/homepage.js"></script>
